more list fuctionality
- list listing
- list update
- list add
- list item add
